Trying to fix broken gridTextBox font on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -386,16 +386,19 @@ p {
 }
 
   .gridTextBox {
-     h4 {
+      h4 {
+        margin: 0;
+        background-color: transparent;
+        color: rgb(255, 255, 255, 1);
+        font-weight: bold;
+        font-family: 'Inter', sans-serif;
+        font-size: 18px;
+      }
+      p {
+        background-color: transparent;
+        color: rgb(255, 255, 255, 1);
         font-size: 14px;
-        };
-     p {
-          font-size: 12px;
-          };
-     padding: 15px;
-     height: 30px;
-   }
-
+      }
 
   #highlightsGrid {
     height: 70vh;
